--- a/index.html
+++ b/index.html
@@ -21,13 +21,59 @@
             </ul>
         </nav>
     </header>
-    <main></main> 
-    <section>
-        <h1>Житловий комплекс в історичному центрі</h1>
-        <img src="./images/background Hero.jpg" alt="#">
-        <span>вул. Садова 10-15</span>
-        <a href="tel:+380991234567">+38 (099) 123-45-67</a>
-    </section>
+    <main>
+      <section>
+          <h1>Житловий комплекс в історичному центрі</h1>
+         <img src="./images/background Hero.jpg" alt="#">
+        <address>
+             <span>вул. Садова 10-15</span>
+            <a href="tel:+380991234567">+38 (099) 123-45-67</a>
+        </address>
+      </section>
+      <section>
+          <h2>Ціни</h2>
+          <table>
+              <caption>Каталог типів квартир за ціною</caption>
+              <thead>
+                  <tr>
+                      <th>Квартира</th>
+                      <th>Поверховість</th>
+                      <th>Ціна</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>Стандарт</td>
+                      <td>1</td>
+                      <td>30000$</td>
+                  </tr>
+                  <tr>
+                      <td>Комфорт</td>
+                      <td>2</td>
+                      <td>40000$</td>
+                  </tr>
+                  <tr>
+                      <td>Люкс</td>
+                      <td>3</td>
+                      <td>50000$</td>
+                  </tr>
+                  <tr>
+                      <td>Супер Люкс</td>
+                      <td>4</td>
+                      <td>60000$</td>
+                  </tr>
+              </tbody>
+              <tfoot>
+                  <tr>
+                     <td>Разом</td>
+                     <td>5</td>
+                     <td>180000$</td> 
+                  </tr>
+               </tfoot>           
+          </table>
+      </section>
+    </main>
+
     <footer></footer>
-</body>
+  </body>
 </html>
